--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -128,6 +128,14 @@
 	"block.luckytntmod.giant_tnt" : "Gigantisches TNT",
 	"block.luckytntmod.mimic_tnt" : "Nachahmendes TNT",
 	"block.luckytntmod.reversed_tnt" : "Umgekehrtes TNT",
+	"block.luckytntmod.entity_firework" : "Entity Feuerwerk",
+	"block.luckytntmod.custom_tnt" : "Custom TNT",
+	"block.luckytntmod.reset_tnt" : "Zur\u00FCcksetzendes TNT",
+	"block.luckytntmod.vicious_tnt" : "B\u00f6sartiges TNT",
+	"block.luckytntmod.hungry_tnt" : "Hungriges TNT",
+	"block.luckytntmod.sinkhole_tnt" : "Sinkh\u00f6hlen TNT",
+	"block.luckytntmod.firestorm_tnt" : "Feuersturm TNT",
+	"block.luckytntmod.snowstorm_tnt" : "Schneesturm TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -288,6 +296,14 @@
 	"entity.luckytntmod.giant_tnt" : "Gigantisches TNT",
 	"entity.luckytntmod.mimic_tnt" : "Nachahmendes TNT",
 	"entity.luckytntmod.reversed_tnt" : "Umgekehrtes TNT",
+	"entity.luckytntmod.entity_firework" : "Entity Feuerwerk",
+	"entity.luckytntmod.custom_tnt" : "Custom TNT",
+	"entity.luckytntmod.reset_tnt" : "Zur\u00FCcksetzendes TNT",
+	"entity.luckytntmod.vicious_tnt" : "B\u00f6sartiges TNT",
+	"entity.luckytntmod.hungry_tnt" : "Hungriges TNT",
+	"entity.luckytntmod.sinkhole_tnt" : "Sinkh\u00f6hlen TNT",
+	"entity.luckytntmod.firestorm_tnt" : "Feuersturm TNT",
+	"entity.luckytntmod.snowstorm_tnt" : "Schneesturm TNT",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
 	"entity.luckytntmod.dynamite_x5" : "Dynamit x5",
