--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -128,6 +128,14 @@
 	"block.luckytntmod.giant_tnt" : "Giant TNT",
 	"block.luckytntmod.mimic_tnt" : "Mimic TNT",
 	"block.luckytntmod.reversed_tnt" : "Reversed TNT",
+	"block.luckytntmod.entity_firework" : "Entity Firework",
+	"block.luckytntmod.custom_tnt" : "Custom TNT",
+	"block.luckytntmod.reset_tnt" : "Reset TNT",
+	"block.luckytntmod.vicious_tnt" : "Vicious TNT",
+	"block.luckytntmod.hungry_tnt" : "Hungry TNT",
+	"block.luckytntmod.sinkhole_tnt" : "Sinkhole TNT",
+	"block.luckytntmod.firestorm_tnt" : "Firestorm TNT",
+	"block.luckytntmod.snowstorm_tnt" : "Snowstorm TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -289,6 +297,14 @@
 	"entity.luckytntmod.giant_tnt" : "Giant TNT",
 	"entity.luckytntmod.mimic_tnt" : "Mimic TNT",
 	"entity.luckytntmod.reversed_tnt" : "Reversed TNT",
+	"entity.luckytntmod.entity_firework" : "Entity Firework",
+	"entity.luckytntmod.custom_tnt" : "Custom TNT",
+	"entity.luckytntmod.reset_tnt" : "Reset TNT",
+	"entity.luckytntmod.vicious_tnt" : "Vicious TNT",
+	"entity.luckytntmod.hungry_tnt" : "Hungry TNT",
+	"entity.luckytntmod.sinkhole_tnt" : "Sinkhole TNT",
+	"entity.luckytntmod.firestorm_tnt" : "Firestorm TNT",
+	"entity.luckytntmod.snowstorm_tnt" : "Snowstorm TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
