--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -167,6 +167,15 @@
 	"item.luckytntmod.sphere_dynamite" : "Kugel Dynamit",
 	"item.luckytntmod.flat_dynamite" : "Ebenen Dynamit",
 	"item.luckytntmod.miningflat_dynamite" : "Bergbauebenen Dynamit",
+	"item.luckytntmod.vaporize_dynamite" : "Verdampfendes Dynamit",
+	"item.luckytntmod.meteor_dynamite" : "Meteor Dynamit",
+	"item.luckytntmod.cubic_dynamite" : "W\u00FCrfel Dynamit",
+	"item.luckytntmod.grove_dynamite" : "Hain Dynamit",
+	"item.luckytntmod.ender_dynamite" : "Ender Dynamit",
+	"item.luckytntmod.arrow_dynamite" : "Pfeile Dynamit",
+	"item.luckytntmod.lightning_dynamite" : "Blitz Dynamit",
+	"item.luckytntmod.digging_dynamite" : "Grabendes Dynamit",
+	"item.luckytntmod.compact_dynamite" : "Kompaktes Dynamit",
 
 	"item.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"item.luckytntmod.red_candy" : "Rotes Bonbon",
@@ -333,6 +342,15 @@
 	"entity.luckytntmod.sphere_dynamite" : "Kugel Dynamit",
 	"entity.luckytntmod.flat_dynamite" : "Ebenen Dynamit",
 	"entity.luckytntmod.miningflat_dynamite" : "Bergbauebenen Dynamit",
+	"entity.luckytntmod.vaporize_dynamite" : "Verdampfendes Dynamit",
+	"entity.luckytntmod.meteor_dynamite" : "Meteor Dynamit",
+	"entity.luckytntmod.cubic_dynamite" : "W\u00FCrfel Dynamit",
+	"entity.luckytntmod.grove_dynamite" : "Hain Dynamit",
+	"entity.luckytntmod.ender_dynamite" : "Ender Dynamit",
+	"entity.luckytntmod.arrow_dynamite" : "Pfeile Dynamit",
+	"entity.luckytntmod.lightning_dynamite" : "Blitz Dynamit",
+	"entity.luckytntmod.digging_dynamite" : "Grabendes Dynamit",
+	"entity.luckytntmod.compact_dynamite" : "Kompaktes Dynamit",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
