--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -167,6 +167,15 @@
 	"item.luckytntmod.sphere_dynamite" : "Sphere Dynamite",
 	"item.luckytntmod.flat_dynamite" : "Flat Dynamite",
 	"item.luckytntmod.miningflat_dynamite" : "Miningflat Dynamite",
+	"item.luckytntmod.vaporize_dynamite" : "Vaporize Dynamite",
+	"item.luckytntmod.meteor_dynamite" : "Meteor Dynamite",
+	"item.luckytntmod.cubic_dynamite" : "Cubic Dynamite",
+	"item.luckytntmod.grove_dynamite" : "Grove Dynamite",
+	"item.luckytntmod.ender_dynamite" : "Ender Dynamite",
+	"item.luckytntmod.arrow_dynamite" : "Arrow Dynamite",
+	"item.luckytntmod.lightning_dynamite" : "Lightning Dynamite",
+	"item.luckytntmod.digging_dynamite" : "Digging Dynamite",
+	"item.luckytntmod.compact_dynamite" : "Compact Dynamite",
 
 	"item.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"item.luckytntmod.red_candy" : "Red Candy",
@@ -334,6 +343,15 @@
 	"entity.luckytntmod.sphere_dynamite" : "Sphere Dynamite",
 	"entity.luckytntmod.flat_dynamite" : "Flat Dynamite",
 	"entity.luckytntmod.miningflat_dynamite" : "Miningflat Dynamite",
+	"entity.luckytntmod.vaporize_dynamite" : "Vaporize Dynamite",
+	"entity.luckytntmod.meteor_dynamite" : "Meteor Dynamite",
+	"entity.luckytntmod.cubic_dynamite" : "Cubic Dynamite",
+	"entity.luckytntmod.grove_dynamite" : "Grove Dynamite",
+	"entity.luckytntmod.ender_dynamite" : "Ender Dynamite",
+	"entity.luckytntmod.arrow_dynamite" : "Arrow Dynamite",
+	"entity.luckytntmod.lightning_dynamite" : "Lightning Dynamite",
+	"entity.luckytntmod.digging_dynamite" : "Digging Dynamite",
+	"entity.luckytntmod.compact_dynamite" : "Compact Dynamite",
 	
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
