--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -144,6 +144,9 @@
 	"block.luckytntmod.cannon_tnt" : "Kanonen TNT",
 	"block.luckytntmod.plantation_tnt" : "Plantagen TNT",
 	"block.luckytntmod.gotthard_tunnel" : "Gotthard Tunnel",
+	"block.luckytntmod.levitating_tnt" : "Aufsteigendes TNT",
+	"block.luckytntmod.squaring_tnt" : "Quadrierendes TNT",
+	"block.luckytntmod.mineral_tnt" : "Mineral TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -332,6 +335,9 @@
 	"entity.luckytntmod.cannon_tnt" : "Kanonen TNT",
 	"entity.luckytntmod.plantation_tnt" : "Plantagen TNT",
 	"entity.luckytntmod.gotthard_tunnel" : "Gotthard Tunnel",
+	"entity.luckytntmod.levitating_tnt" : "Aufsteigendes TNT",
+	"entity.luckytntmod.squaring_tnt" : "Quadrierendes TNT",
+	"entity.luckytntmod.mineral_tnt" : "Mineral TNT",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
 	"entity.luckytntmod.dynamite_x5" : "Dynamit x5",
