--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -147,6 +147,8 @@
 	"block.luckytntmod.levitating_tnt" : "Levitating TNT",
 	"block.luckytntmod.squaring_tnt" : "Squaring TNT",
 	"block.luckytntmod.mineral_tnt" : "Mineral TNT",
+	"block.luckytntmod.flower_forest_tnt" : "Flower Forest TNT",
+	"block.luckytntmod.icy_tnt" : "Icy TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -339,6 +341,8 @@
 	"entity.luckytntmod.levitating_tnt" : "Levitating TNT",
 	"entity.luckytntmod.squaring_tnt" : "Squaring TNT",
 	"entity.luckytntmod.mineral_tnt" : "Mineral TNT",
+	"entity.luckytntmod.flower_forest_tnt" : "Flower Forest TNT",
+	"entity.luckytntmod.icy_tnt" : "Icy TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
