--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -184,6 +184,46 @@
 	"item.luckytntmod.lightning_dynamite" : "Blitz Dynamit",
 	"item.luckytntmod.digging_dynamite" : "Grabendes Dynamit",
 	"item.luckytntmod.compact_dynamite" : "Kompaktes Dynamit",
+	"item.luckytntmod.animal_dynamite" : "Tier Dynamit",
+	"item.luckytntmod.ocean_dynamite" : "Ozean Dynamit",
+	"item.luckytntmod.spiral_dynamite" : "Spiralen Dynamit",
+	"item.luckytntmod.chemical_dynamite" : "Chemisches Dynamit",
+	"item.luckytntmod.reaction_dynamite" : "Reagierendes Dynamit",
+	"item.luckytntmod.hellfire_dynamite" : "H\u00f6llenfeuer Dynamit",
+	"item.luckytntmod.floating_island_dynamite" : "Fliegende Insel Dynamit",
+	"item.luckytntmod.erupting_dynamite" : "Ausbrechendes Dynamit",
+	"item.luckytntmod.shatterproof_dynamite" : "Bruchsicheres Dynamit",
+	"item.luckytntmod.lava_ocean_dynamite" : "Lava Ozean Dynamit",
+	"item.luckytntmod.wool_dynamite" : "Wolle Dynamit",
+	"item.luckytntmod.nuclear_waste_dynamite" : "Atomm\u00FCll Dynamit",
+	"item.luckytntmod.timer_dynamite" : "Timer Dynamit",
+	"item.luckytntmod.gravity_dynamite" : "Schwerkraft Dynamit",
+	"item.luckytntmod.withering_dynamite" : "Ausd\u00f6rrendes Dynamit",
+	"item.luckytntmod.sensor_dynamite" : "Sensor Dynamit",
+	"item.luckytntmod.rainbow_dynamite" : "Regenbogen Dynamit",
+	"item.luckytntmod.roulette_dynamite" : "Roulette Dynamit",
+	"item.luckytntmod.bouncing_dynamite" : "Abprallendes Dynamit",
+	"item.luckytntmod.igniter_dynamite" : "Z\u00FCnder Dynamit",
+	"item.luckytntmod.multiplying_dynamite" : "Multiplizierendes Dynamit",
+	"item.luckytntmod.random_dynamite" : "Zuf\u00e4lliges Dynamit",
+	"item.luckytntmod.homing_dynamite" : "Zielsuchendes Dynamit",
+	"item.luckytntmod.pulse_dynamite" : "Pulsierendes Dynamit",
+	"item.luckytntmod.physics_dynamite" : "Physik Dynamit",
+	"item.luckytntmod.picky_dynamite" : "W\u00e4hlerisches Dynamit",
+	"item.luckytntmod.cluster_dynamite" : "Streudynamit",
+	"item.luckytntmod.tunneling_dynamite" : "Tunnelndes Dynamit",
+	"item.luckytntmod.xray_dynamite" : "XRay Dynamit",
+	"item.luckytntmod.farming_dynamite" : "Farm Dynamit",
+	"item.luckytntmod.big_dynamite" : "Gro\u00dfes Dynamit",
+	"item.luckytntmod.ice_meteor_dynamite" : "Eismeteor Dynamit",
+	"item.luckytntmod.honey_dynamite" : "Honig Dynamit",
+	"item.luckytntmod.ultralight_dynamite" : "Federleichtes Dynamit",
+	"item.luckytntmod.accelerating_dynamite" : "Beschleunigendes Dynamit",
+	"item.luckytntmod.nether_grove_dynamite" : "Nether Hain Dynamit",
+	"item.luckytntmod.lush_dynamite" : "\u00dcppiges Dynamit",
+	"item.luckytntmod.dripstone_dynamite" : "Tropfstein Dynamit",
+	"item.luckytntmod.end_dynamite" : "End Dynamit",
+	"item.luckytntmod.lucky_dynamite" : "Lucky Dynamit",
 
 	"item.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"item.luckytntmod.red_candy" : "Rotes Bonbon",
@@ -366,6 +406,46 @@
 	"entity.luckytntmod.lightning_dynamite" : "Blitz Dynamit",
 	"entity.luckytntmod.digging_dynamite" : "Grabendes Dynamit",
 	"entity.luckytntmod.compact_dynamite" : "Kompaktes Dynamit",
+	"entity.luckytntmod.animal_dynamite" : "Tier Dynamit",
+	"entity.luckytntmod.ocean_dynamite" : "Ozean Dynamit",
+	"entity.luckytntmod.spiral_dynamite" : "Spiralen Dynamit",
+	"entity.luckytntmod.chemical_dynamite" : "Chemisches Dynamit",
+	"entity.luckytntmod.reaction_dynamite" : "Reagierendes Dynamit",
+	"entity.luckytntmod.hellfire_dynamite" : "H\u00f6llenfeuer Dynamit",
+	"entity.luckytntmod.floating_island_dynamite" : "Fliegende Insel Dynamit",
+	"entity.luckytntmod.erupting_dynamite" : "Ausbrechendes Dynamit",
+	"entity.luckytntmod.shatterproof_dynamite" : "Bruchsicheres Dynamit",
+	"entity.luckytntmod.lava_ocean_dynamite" : "Lava Ozean Dynamit",
+	"entity.luckytntmod.wool_dynamite" : "Wolle Dynamit",
+	"entity.luckytntmod.nuclear_waste_dynamite" : "Atomm\u00FCll Dynamit",
+	"entity.luckytntmod.timer_dynamite" : "Timer Dynamit",
+	"entity.luckytntmod.gravity_dynamite" : "Schwerkraft Dynamit",
+	"entity.luckytntmod.withering_dynamite" : "Ausd\u00f6rrendes Dynamit",
+	"entity.luckytntmod.sensor_dynamite" : "Sensor Dynamit",
+	"entity.luckytntmod.rainbow_dynamite" : "Regenbogen Dynamit",
+	"entity.luckytntmod.roulette_dynamite" : "Roulette Dynamit",
+	"entity.luckytntmod.bouncing_dynamite" : "Abprallendes Dynamit",
+	"entity.luckytntmod.igniter_dynamite" : "Z\u00FCnder Dynamit",
+	"entity.luckytntmod.multiplying_dynamite" : "Multiplizierendes Dynamit",
+	"entity.luckytntmod.random_dynamite" : "Zuf\u00e4lliges Dynamit",
+	"entity.luckytntmod.homing_dynamite" : "Zielsuchendes Dynamit",
+	"entity.luckytntmod.pulse_dynamite" : "Pulsierendes Dynamit",
+	"entity.luckytntmod.physics_dynamite" : "Physik Dynamit",
+	"entity.luckytntmod.picky_dynamite" : "W\u00e4hlerisches Dynamit",
+	"entity.luckytntmod.cluster_dynamite" : "Streudynamit",
+	"entity.luckytntmod.tunneling_dynamite" : "Tunnelndes Dynamit",
+	"entity.luckytntmod.xray_dynamite" : "XRay Dynamit",
+	"entity.luckytntmod.farming_dynamite" : "Farm Dynamit",
+	"entity.luckytntmod.big_dynamite" : "Gro\u00dfes Dynamit",
+	"entity.luckytntmod.ice_meteor_dynamite" : "Eismeteor Dynamit",
+	"entity.luckytntmod.honey_dynamite" : "Honig Dynamit",
+	"entity.luckytntmod.ultralight_dynamite" : "Federleichtes Dynamit",
+	"entity.luckytntmod.accelerating_dynamite" : "Beschleunigendes Dynamit",
+	"entity.luckytntmod.nether_grove_dynamite" : "Nether Hain Dynamit",
+	"entity.luckytntmod.lush_dynamite" : "\u00dcppiges Dynamit",
+	"entity.luckytntmod.dripstone_dynamite" : "Tropfstein Dynamit",
+	"entity.luckytntmod.end_dynamite" : "End Dynamit",
+	"entity.luckytntmod.lucky_dynamite" : "Lucky Dynamit",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
@@ -379,6 +459,7 @@
 	"entity.luckytntmod.present" : "Geschenk",
 	"entity.luckytntmod.bomb" : "Bombe",
 	"entity.luckytntmod.ice_meteor" : "Eismeteor",
+	"entity.luckytntmod.little_ice_meteor" : "Kleiner Eismeteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projektil",
 	"entity.luckytntmod.chicxulub_meteor": "Chicxulub Meteorit",
 	"entity.luckytntmod.tsar_bomba_bomb" : "Zar Bombe Bombe",
