--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -184,6 +184,46 @@
 	"item.luckytntmod.lightning_dynamite" : "Lightning Dynamite",
 	"item.luckytntmod.digging_dynamite" : "Digging Dynamite",
 	"item.luckytntmod.compact_dynamite" : "Compact Dynamite",
+	"item.luckytntmod.animal_dynamite" : "Animal Dynamite",
+	"item.luckytntmod.ocean_dynamite" : "Ocean Dynamite",
+	"item.luckytntmod.spiral_dynamite" : "Spiral Dynamite",
+	"item.luckytntmod.chemical_dynamite" : "Chemical Dynamite",
+	"item.luckytntmod.reaction_dynamite" : "Reaction Dynamite",
+	"item.luckytntmod.hellfire_dynamite" : "Hellfire Dynamite",
+	"item.luckytntmod.floating_island_dynamite" : "Floating Island Dynamite",
+	"item.luckytntmod.erupting_dynamite" : "Erupting Dynamite",
+	"item.luckytntmod.shatterproof_dynamite" : "Shatterproof Dynamite",
+	"item.luckytntmod.lava_ocean_dynamite" : "Lava Ocean Dynamite",
+	"item.luckytntmod.wool_dynamite" : "Wool Dynamite",
+	"item.luckytntmod.nuclear_waste_dynamite" : "Nuclear Waste Dynamite",
+	"item.luckytntmod.timer_dynamite" : "Timer Dynamite",
+	"item.luckytntmod.gravity_dynamite" : "Gravity Dynamite",
+	"item.luckytntmod.withering_dynamite" : "Withering Dynamite",
+	"item.luckytntmod.sensor_dynamite" : "Sensor Dynamite",
+	"item.luckytntmod.rainbow_dynamite" : "Rainbow Dynamite",
+	"item.luckytntmod.roulette_dynamite" : "Roulette Dynamite",
+	"item.luckytntmod.bouncing_dynamite" : "Bouncing Dynamite",
+	"item.luckytntmod.igniter_dynamite" : "Igniter Dynamite",
+	"item.luckytntmod.multiplying_dynamite" : "Multiplying Dynamite",
+	"item.luckytntmod.random_dynamite" : "Random Dynamite",
+	"item.luckytntmod.homing_dynamite" : "Homing Dynamite",
+	"item.luckytntmod.pulse_dynamite" : "Pulse Dynamite",
+	"item.luckytntmod.physics_dynamite" : "Physics Dynamite",
+	"item.luckytntmod.picky_dynamite" : "Picky Dynamite",
+	"item.luckytntmod.cluster_dynamite" : "Cluster Dynamite",
+	"item.luckytntmod.tunneling_dynamite" : "Tunneling Dynamite",
+	"item.luckytntmod.xray_dynamite" : "XRay Dynamite",
+	"item.luckytntmod.farming_dynamite" : "Farming Dynamite",
+	"item.luckytntmod.big_dynamite" : "Big Dynamite",
+	"item.luckytntmod.ice_meteor_dynamite" : "Ice Meteor Dynamite",
+	"item.luckytntmod.honey_dynamite" : "Honey Dynamite",
+	"item.luckytntmod.ultralight_dynamite" : "Ultralight Dynamite",
+	"item.luckytntmod.accelerating_dynamite" : "Accelerating Dynamite",
+	"item.luckytntmod.nether_grove_dynamite" : "Nether Grove Dynamite",
+	"item.luckytntmod.lush_dynamite" : "Lush Dynamite",
+	"item.luckytntmod.dripstone_dynamite" : "Dripstone Dynamite",
+	"item.luckytntmod.end_dynamite" : "End Dynamite",
+	"item.luckytntmod.lucky_dynamite" : "Lucky Dynamite",
 
 	"item.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"item.luckytntmod.red_candy" : "Red Candy",
@@ -367,6 +407,46 @@
 	"entity.luckytntmod.lightning_dynamite" : "Lightning Dynamite",
 	"entity.luckytntmod.digging_dynamite" : "Digging Dynamite",
 	"entity.luckytntmod.compact_dynamite" : "Compact Dynamite",
+	"entity.luckytntmod.animal_dynamite" : "Animal Dynamite",
+	"entity.luckytntmod.ocean_dynamite" : "Ocean Dynamite",
+	"entity.luckytntmod.spiral_dynamite" : "Spiral Dynamite",
+	"entity.luckytntmod.chemical_dynamite" : "Chemical Dynamite",
+	"entity.luckytntmod.reaction_dynamite" : "Reaction Dynamite",
+	"entity.luckytntmod.hellfire_dynamite" : "Hellfire Dynamite",
+	"entity.luckytntmod.floating_island_dynamite" : "Floating Island Dynamite",
+	"entity.luckytntmod.erupting_dynamite" : "Erupting Dynamite",
+	"entity.luckytntmod.shatterproof_dynamite" : "Shatterproof Dynamite",
+	"entity.luckytntmod.lava_ocean_dynamite" : "Lava Ocean Dynamite",
+	"entity.luckytntmod.wool_dynamite" : "Wool Dynamite",
+	"entity.luckytntmod.nuclear_waste_dynamite" : "Nuclear Waste Dynamite",
+	"entity.luckytntmod.timer_dynamite" : "Timer Dynamite",
+	"entity.luckytntmod.gravity_dynamite" : "Gravity Dynamite",
+	"entity.luckytntmod.withering_dynamite" : "Withering Dynamite",
+	"entity.luckytntmod.sensor_dynamite" : "Sensor Dynamite",
+	"entity.luckytntmod.rainbow_dynamite" : "Rainbow Dynamite",
+	"entity.luckytntmod.roulette_dynamite" : "Roulette Dynamite",
+	"entity.luckytntmod.bouncing_dynamite" : "Bouncing Dynamite",
+	"entity.luckytntmod.igniter_dynamite" : "Igniter Dynamite",
+	"entity.luckytntmod.multiplying_dynamite" : "Multiplying Dynamite",
+	"entity.luckytntmod.random_dynamite" : "Random Dynamite",
+	"entity.luckytntmod.homing_dynamite" : "Homing Dynamite",
+	"entity.luckytntmod.pulse_dynamite" : "Pulse Dynamite",
+	"entity.luckytntmod.physics_dynamite" : "Physics Dynamite",
+	"entity.luckytntmod.picky_dynamite" : "Picky Dynamite",
+	"entity.luckytntmod.cluster_dynamite" : "Cluster Dynamite",
+	"entity.luckytntmod.tunneling_dynamite" : "Tunneling Dynamite",
+	"entity.luckytntmod.xray_dynamite" : "XRay Dynamite",
+	"entity.luckytntmod.farming_dynamite" : "Farming Dynamite",
+	"entity.luckytntmod.big_dynamite" : "Big Dynamite",
+	"entity.luckytntmod.ice_meteor_dynamite" : "Ice Meteor Dynamite",
+	"entity.luckytntmod.honey_dynamite" : "Honey Dynamite",
+	"entity.luckytntmod.ultralight_dynamite" : "Ultralight Dynamite",
+	"entity.luckytntmod.accelerating_dynamite" : "Accelerating Dynamite",
+	"entity.luckytntmod.nether_grove_dynamite" : "Nether Grove Dynamite",
+	"entity.luckytntmod.lush_dynamite" : "Lush Dynamite",
+	"entity.luckytntmod.dripstone_dynamite" : "Dripstone Dynamite",
+	"entity.luckytntmod.end_dynamite" : "End Dynamite",
+	"entity.luckytntmod.lucky_dynamite" : "Lucky Dynamite",
 	
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
@@ -380,6 +460,7 @@
 	"entity.luckytntmod.bomb" : "Bomb",
 	"entity.luckytntmod.present" : "Present",
 	"entity.luckytntmod.ice_meteor" : "Ice Meteor",
+	"entity.luckytntmod.little_ice_meteor" : "Little Ice Meteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projectile",
 	"entity.luckytntmod.chicxulub_meteor": "Chicxulub Meteor",
 	"entity.luckytntmod.tsar_bomba_bomb" : "Tsar Bomba Bomb",
